--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,12 @@
     <div class="wrapper">
         <header class="header">
             <h1>Prince George's Crime Map</h1>
+            <h2>About me</h2>
         </header>
         <div class="container">
+            <div>
+                <a href="https://github.com/MarioVA1/377Final#readme">About me</a>
+            </div>
             <div class="left_section box">
                 <h2>Form Inputs</h2>
                 <form action="/api" class="box main_form">
