--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                         <label for="resto">Filter Restaurant List</label>
                         <input type="text" name="resto" id="resto">
                     </div>
-                    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>                   
-                    <button type="submit" id="get-resto">Change Restaurants</button>
+                    <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->                   
+                    <button type="submit" id="get-resto">Change data</button>
                 </form>
             </div>
             <div class="right_section box ">
@@ -40,8 +40,7 @@
             </div>
         </div>
         <footer class="footer">
-            MarioVA1
-            <a href="http://github.com/MarioVA1" target="_blank" rel="noopener noreferrer">GitHub Account</a>
+            <a href="https://github.com/MarioVA1/377Final#readme" target="_blank" rel="noopener noreferrer">About this site</a>
         </footer>
     </div>
     <script src= "./script.js"></script>
