--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2>Form Inputs</h2>
                 <form action="/api" class="box main_form">
                     <div>
-                        <label for="resto">Filter Restaurant List</label>
+                        <label for="resto">Enter type of crime</label>
                         <input type="text" name="resto" id="resto">
                     </div>
                     <!-- <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div> -->                   
