Copied lab 4's style css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>INST377 Scuffed Final</title>
 </head>
 <body>
-    <div>
-        <p>Hello</p>
+    <div class="wrapper">
+        
     </div>
 </body>
 </html>
