--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!--
-    This is how to build the CSS-only load animation from loading.io    
-    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>
+<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
+<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
+<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
 
-    This is helpful for showing your client-side users when data is loading,
-    since there's otherwise no sign your app is thinking about something!
-
-    Try placing it at the same level in your element tree as your Submit button
--->
+<!-- Temporarily unhook your script.js file from your main index file -->
 
 <html lang="en">
 <head>
@@ -28,14 +24,13 @@
                     <div>
                         <label for="resto">Restaurant Name</label>
                         <input type="text" name="resto" id="resto">
-                    </div>
-                    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>                   
-                    <button type="submit" id="get-resto">Submit</button>
+                    </div>                   
+                    <button type="submit">Submit</button>
                 </form>
             </div>
             <div class="right_section box ">
                 <h2>Local Restaurants</h2>
-                <div class="box" id = "restaurant_list" >
+                <div class="restaurant_list box">
                     A list of local restaurants from an API
                 </div>
             </div>
