--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mario Villatoro Amaya's Labs For INST377</title>
+    <title>INST377 Final</title>
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1>Mario Villatoro Amaya INST377 Labs</h1>
+            <h1>Prince George's Crime Map and Distribution</h1>
         </header>
         <div class="container">
             <div class="right_section box ">
-                <h2>Local Restaurants</h2>
+                <h2></h2>
                 <div class="restaurant_list box">
-                    A list of local restaurants from an API
+                   
                 </div>
             </div>
             <div class="left_section box">
-                <h2>Form Inputs</h2>
+                <h2>Crime</h2>
                 <form action="/api" class="box main_form">
                     <div>
                         <label for="resto">Restaurant Name</label>
@@ -36,8 +36,8 @@
             </div>
         </div>
         <footer class="footer">
-            MarioVA1
-            <a href="http://github.com/MarioVA1" target="_blank" rel="noopener noreferrer">GitHub Account</a>
+            <a href="https://github.com/MarioVA1/INST377Final/blob/main/README.md" 
+            target="_blank" rel="noopener noreferrer">About</a>
         </footer>
     </div>
     <script src= "./script.js"></script>
