--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
-<!-- Bring in your successful HTML/CSS from the Flexbox lab -->
-<!-- Your page will need a form in it with an 'action' to /api and a single text field with an id/name of "resto" -->
-<!-- If you open /routes/apiRoutes and go to line 38 you will find the server side answer to your request! -->
-
-<!-- Temporarily unhook your script.js file from your main index file -->
-
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PG's Crime</title>
+    <title>Mario Villatoro Amaya's Labs For INST377</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
+    integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
+    crossorigin=""/>
    <link rel="stylesheet" href="style.css">
+
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"
+    integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM="
+    crossorigin=""></script>
 </head>
 <body>
     <div class="wrapper">
         <header class="header">
-            <h1>Prince George's Crime Map and Distribution</h1>
+            <h1>Mario Villatoro Amaya INST377 Labs</h1>
         </header>
         <div class="container">
             <div class="left_section box">
                 <h2>Form Inputs</h2>
                 <form action="/api" class="box main_form">
                     <div>
-                        <label for="resto">Restaurant Name</label>
+                        <label for="resto">Filter Restaurant List</label>
                         <input type="text" name="resto" id="resto">
-                    </div>                   
-                    <button type="submit">Submit</button>
+                    </div>
+                    <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>                   
+                    <button type="submit" id="get-resto">Change Restaurants</button>
                 </form>
             </div>
             <div class="right_section box ">
-                <h2>Local Restaurants</h2>
-                <div class="restaurant_list box">
+                <h2>Local Restaurant Map</h2>
+                <div id="map"></div>
+                <div class="box" id = "restaurant_list" >
                     A list of local restaurants from an API
                 </div>
             </div>
