changed the action

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         <div class="container">
             <div class="left_section box">
                 <h2>Form Inputs</h2>
-                <form action="/api" class="box main_form">
+                <form action="https://data.princegeorgescountymd.gov/resource/amvf-x3gi.json"
+                 class="box main_form">
                     <div>
-                        <label for="resto">Filter Restaurant List</label>
-                        <input type="text" name="resto" id="resto">
+                        <label for="crime_list">Filter Restaurant List</label>
+                        <input type="text" name="crime_list" id="crime_list">
                     </div>
                     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>                   
                     <button type="submit" id="get-resto">Change Restaurants</button>
