--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <form action="https://data.princegeorgescountymd.gov/resource/amvf-x3gi.json"
                  class="box main_form">
                     <div>
-                        <label for="clearance_code_inc_type">Filter Restaurant List</label>
-                        <input type="text" name="clearance_code_inc_type" id="clearance_code_inc_type">
+                        <label for="resto">Filter Restaurant List</label>
+                        <input type="text" name="resto" id="resto">
                     </div>
                     <div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div>                   
                     <button type="submit" id="get-resto">Change Restaurants</button>
